Shadow: Fix checksum of LH-6 with wrong text index patch

Clones:
Ali (7-digit conversion Free Play rev. 76)
Bad Girls (alternate set)
Baywatch 3.00 (German)
Beavis and Butt-Head (Class of 1812 MOD)
Big Game (MOD rev. 12)
Big Guns (alternate P-1, maybe LG/German?)
Black Knight L-2
Bugs Bunny's Birthday Ball LG-2 (German)
Cue Ball Wizard (older display rev.)
Dracula (One Ball MOD)
Elvis 1.00
Farfalla (French Speech)
Flipper Football 1.03
Frankenstein 1.03 (Italian)
Galaxy (7-Digit conversion, Fixes & modified rules)
Jungle Lord (new tricks) L2 & L3beta (MOD)
Lightning (Free Play & MOD rev. 25)
Metallica 0.52
Mexico 86 (Italian Speech)
Mr. & Mrs. Pac-Man Pinball (alternate version)
Odin (Prototype)
Pinball Champ (French Speech)
Pin-Bot J-2 (PEMBOT (no relation)) (MOD)
Royal Flush Deluxe rev. 1
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
Shadow, The LF-4 (French)
Spirit (initial release) & rev. 3 (MOD)
STTNG LX-8 (MOD) (using the special L-1 sound roms, note that the special callouts can be turned off completely within the game menu)
Swords of Fury LG-2 (German)
Teenage Mutant Ninja Turtles A 0.7 VUK (Prototype)
Time Machine (Zaccaria, Italian Speech)
Tommy 1.02 (Belgian), 2.01 (Dutch), 3.01 (German)
White Water P-6 (Prototype)
Wildfyre (One Ball MOD)
Zankor (TMS5220 Italian Speech)

Removed Clones:
NBA Fastbreak: 3.1 with Sound S1.0 (as this was just created to be able to use S1.0, which is nowadays wired to 1.1/1.15 instead)
Star Trek: The Next Generation S7/DS (as these were just created to be able to use a P-1 sound rom, (for now) wired to P-4 instead)
White Water P-1/P-2 (as these were just created to be able to use the P-1 sound roms, now wired to P-6 as found on a real machine)



Version 3.5 (October 23rd, 2022) - "Trick or Treat"
------------------------------------------------------------------------------

Saving NVRAM for Juegos Populares
