@@ -2686,6 +2686,7 @@ DRIVER(pool,l7c)        //          10/19 B Pool Sharks (LA-7C Competition MOD)
 DRIVER(diner,p0)        //S11-571:  11/89 W Diner (PA-0 Prototype)
 DRIVER(diner,l1)        //          06/90 W Diner (LU-1 Europe)
 DRIVER(diner,l2)        //          06/90 W Diner (LU-2 Europe)
+DRIVER(diner,g2)        //          06/90 W Diner (LG-2 German)
 DRIVER(diner,f2)        //          06/90 W Diner (LF-2 French)
 DRIVER(diner,l3)        //          06/90 W Diner (LA-3)
 DRIVER(diner,l4)        //          09/90 W Diner (LA-4)
