@@ -115,6 +115,7 @@ Big Guns (alternate P-1, maybe LG/German?)
 Black Knight L-2
 Bugs Bunny's Birthday Ball LG-2 (German)
 Cue Ball Wizard (older display rev.)
+Diner LG-2 (German)
 Dracula (One Ball MOD)
 Elvis 1.00
 Farfalla (French Speech)
